--- a/public/styleSheet/views-styleSheets/home.css
+++ b/public/styleSheet/views-styleSheets/home.css
@@ -76,7 +76,6 @@ body{
 }
 
 .big-pizza{
-    
     margin-top: -10px;
     box-shadow: 5px 10px 20px rgba(0,0,0,0.4);
     border-radius: 100px;
@@ -117,7 +116,7 @@ body{
 }
 
 .content-pizza{
-    width: 150px;
+    width: 140px;
     margin: 0px;
     border-radius: 15px;
     background-color: rgb(255, 255, 255);
@@ -146,22 +145,64 @@ body{
 
 .container-info{
     flex-direction: column;
-    position: fixed;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
     background-color: #f8f8f8;
     width: 100%;
     height: 130vh;
     margin-top: -206vh;
     gap: 20px;
-    display: flex;
+    display: none;
     z-index: 100px;
 }
+
+
+.content-photo-name {
+    border-radius: 0px;
+    position: relative;
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    background-position: center;
+    filter: brightness(50%) ; /* Ajuste os valores de brilho (brightness) e contraste (contrast) conforme necessário */
+  }
+  
+  .content-photo-name .focus {
+    position: relative;
+    padding: 20px;
+    color: #ffffff;
+  }
+  .focus{
+    z-index: 1000px;
+  }
+  .content-photo-name h1 {
+    font-size: 24px;
+  }
+  
+  .content-photo-name p {
+    font-size: 16px;
+  }
+  
+.c{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 200px;
+}
+
 .photoPizza{
-    border-radius: 100px;
+    width: 200px;
+    height: 200px;
+    margin-top: 30px;
+    border-radius: 100%;
     box-shadow: 0px 15px 15px rgba(0,0,0,0.3);
+    background-color: transparent;
 }
 .content-info{
+    position: absolute;
+    margin-top: 45vh;
+    padding-top: 57px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -171,18 +212,25 @@ body{
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
 }
-.controls{
+.content-name{
     width: 100%;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center
+}
+.controls{
+    margin-top: 20px;
+    position: absolute;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 200px;
 }
 .content-size{
-    gap: 5px;
-    width: 90px;
-    height: 110px;
+    gap: 1px;
+    width: 80px;
+    height: 100px;
     border-radius: 15px;
     background-color: #d1d0d0;
     display: flex;
@@ -191,13 +239,12 @@ body{
     align-items: center;
 }
 .container-size{    
-    padding-top: 50px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
 }
 .content-price{
     margin-left: 40px;
