--- a/public/styleSheet/views-styleSheets/home.css
+++ b/public/styleSheet/views-styleSheets/home.css
@@ -25,6 +25,7 @@ body{
     gap: 10px;
 }
 .btn-navigaor{
+    margin-top: 20px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -76,12 +77,14 @@ body{
 }
 
 .big-pizza{
+    border: none;
     margin-top: -10px;
     box-shadow: 5px 10px 20px rgba(0,0,0,0.4);
     border-radius: 100px;
     width: 120px;
     height: 120px;
     transition: all 1s;
+    
 }
 .container-all-pizza{
     width: 100%;
@@ -146,7 +149,7 @@ body{
 .container-info{
     flex-direction: column;
     position: absolute;
-    background-color: #f8f8f8;
+    background-color: #161616;
     width: 100%;
     height: 130vh;
     margin-top: -206vh;
@@ -195,9 +198,10 @@ body{
     width: 200px;
     height: 200px;
     margin-top: 30px;
+    border: none;
     border-radius: 100%;
     box-shadow: 0px 15px 15px rgba(0,0,0,0.3);
-    background-color: transparent;
+    
 }
 .content-info{
     position: absolute;
