update na tela do mapa

--- a/views/markOnMap.html
+++ b/views/markOnMap.html
@@ -41,7 +41,8 @@
                     <img class="icoLocation" src="/public/img/ico/icons8_shopw_32.png" alt="">
                     <h5 class="color-white">Angola, Luanda, Cuca</h5>
                 </div>
-                <button style="background-color: white; width: 45px; height: 45px;" class="circle-btn-silver"><img src="/public/img/ico/icons8_phone_32.png" alt=""></button>
+                <button style=" display: flex; justify-content: center;
+                 align-items: center; background-color: white; width: 40px; height: 40px;" class="circle-btn-silver"><img src="/public/img/ico/icons8_phone_32.png" alt=""></button>
             </div>
 
         </div>
